# classifiers

./: .gitignore  Makefile  README.md  pyproject.toml  quries_tens.txt
classifiers/: evaluate.py  trainer.py  visualize.py
classifiers/data/: coco_eval.py  image_net.py  transforms.py
classifiers/dataset/: imagenet.py  transforms.py
classifiers/models/: README.md  __init__.py  create.py  darknet.py  resnet.py  simmim.py  swin.py  vit.py
classifiers/solver/: __init__.py  build.py  config.py  optimizers.py  schedulers.py
classifiers/solvers/: __init__.py  build.py  config.py  schedulers.py
classifiers/utils/: reproduce.py  schedulers.py
configs/: train-imagenet-resnet.yaml  train-imagenet-swin-from-pretrained-simmim.yaml  train-imagenet-swin-simmim-img-192-100-epoch.yaml  train-imagenet-swin-simmim-img-192-800-epoch.yaml  train-imagenet-swin-simmim.yaml  train-imagenet-swin.yaml  train-imagenet-vit-aif.yaml  train-imagenet-vit.yaml
configs/darknet/: darknet53.yaml
configs/resnet/: resnet50.yaml
configs/simmim/: simmim-swin-base-patch-4-window-6.yaml  simmim-swin-base-patch-4-window-7.yaml
configs/swin/: swin-base-patch-4-window-7.yaml  swin-base-patch4-window-7.yaml  swin-base.yaml
configs/vit/: vit-base-16.yaml
data/: get_imagenet.sh  get_imagenet_2012.sh  get_rbg_nir_scene_dataset.sh
scripts/: test.py  train.py  train_classifier.py  train_simmim.py
scripts/configs/: train-imagenet-archive.yaml  train-imagenet-vit.yaml  train-imagenet.yaml  train-imgnet.yaml
scripts/configs/vit/: vit-base-16.yaml  (+1 more)
scripts/visualize/: visualize_latent_space.py
(+1 files in other folders)
